# auto-chmod

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Cargo.toml  Messages.sh  README.md
src/: main.rs
